# geom-rs

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md  deploy.sh  index.html  search-index.js
geom/: index.html  sidebar-items.js  stability.html  stability.json  type.Point.html  type.Rect.html
geom/point/: constant.DOWN.html  constant.LEFT.html  constant.RIGHT.html  constant.UP.html  constant.ZERO.html  index.html  sidebar-items.js  struct.Point.html  trait.Position2D.html
geom/rect/: index.html  sidebar-items.js  struct.Iter.html  struct.Rect.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/: trait.IntoIterator.js  trait.Iterator.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.Sub.js
src/: lib.rs  point.rs  rect.rs
src/geom/: lib.rs.html  point.rs.html  rect.rs.html
tests/: mod.rs
