[package]
name = "geom"
version = "0.2.3"
authors = ["Brandon King <wektorious@gmail.com>"]

description = "Simple 2D geometry library."

documentation = "https://vectorious.github.io/geom-rs/"
homepage = "https://vectorious.github.io/geom-rs/"
repository = "https://github.com/Vectorious/geom-rs"

readme = "README.md"

keywords = ["geometry", "2d"]

license = "MIT"
